--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
         });
     </script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body class="bg-gray-900 text-white">
     <div id="root"></div>
