--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
     </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.min.js"></script>
+    <script src="https://unpkg.com/@solana/wallet-adapter-base/lib/index.iife.min.js"></script>
+    <script src="https://unpkg.com/@solana/wallet-adapter-phantom/lib/index.iife.min.js"></script>
 </head>
 <body class="bg-gray-900 text-white">
     <div id="root"></div>
